crates/convertor/tests/snapshots/profile_test__render_surge_rule_provider-6.snap
---
source: crates/convertor/tests/profile_test.rs
expression: payload
---
# DIRECT,no-resolve
IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
