crates/convertor/tests/snapshots/profile_test__render_surge_rule_provider-7.snap
---
source: crates/convertor/tests/profile_test.rs
expression: payload
---
# DIRECT,force-remote-dns
DOMAIN-SUFFIX,apple.com,DIRECT,force-remote-dns
DOMAIN-SUFFIX,icloud.com,DIRECT,force-remote-dns
DOMAIN-SUFFIX,crashlytics.com,DIRECT,force-remote-dns
DOMAIN-SUFFIX,bing.com,DIRECT,force-remote-dns
DOMAIN-SUFFIX,msn.com,DIRECT,force-remote-dns
